# backports.functools_lru_cache

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml
backports/: functools_lru_cache.py
docs/: conf.py  index.rst
newsfragments/: +7e6fa2bb.feature.rst  +8f7dceef.removal.rst  20.bugfix.rst
tests/: test_lru_cache.py
