[metadata]
license_files =
	LICENSE
name = backports.functools_lru_cache
author = Raymond Hettinger
author_email = raymond.hettinger@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = Backport of functools.lru_cache
long_description = file:README.rst
url = https://github.com/jaraco/backports.functools_lru_cache
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
# py27 compat
# packages = find_namespace:
packages = find:
include_package_data = true
python_requires = >=2.6
install_requires =
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4; python_version >= "3.6"
	pytest-flake8; python_version >= "3"
	# python_implementation: workaround for jaraco/skeleton#22
	# python_version: workaround for python/typed_ast#156
	pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version < "3.10" and python_version >= "3"
	pytest-cov; python_version >= "3"
	# python_implementation: workaround for jaraco/skeleton#22
	# python_version: workaround for python/typed_ast#156
	pytest-mypy; python_implementation != "PyPy" and python_version < "3.10" and python_version >= "3"
	pytest-enabler >= 1.0.1; python_version >= "3.0"

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]


[bdist_wheel]
universal = 1
