[metadata]
name = backports.functools_lru_cache
author = Raymond Hettinger
author_email = raymond.hettinger@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = Backport of functools.lru_cache
long_description = file:README.rst
url = https://github.com/jaraco/backports.functools_lru_cache
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
# py27 compat
# packages = find_namespace:
packages = find:
include_package_data = true
python_requires = >=2.6
install_requires =

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4; python_version >= "3.6"
	pytest-flake8; \
		python_version >= "3"
		# workaround for tholo/pytest-flake8#87
		python_version < "3.12" \
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	# python_implementation: workaround for jaraco/skeleton#22
	pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version >= "3"
	pytest-cov; python_version >= "3"
	# python_implementation: workaround for jaraco/skeleton#22
	pytest-mypy; python_implementation != "PyPy" and python_version >= "3"
	pytest-enabler >= 1.3; python_version >= "3.0"

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]

[bdist_wheel]
universal = 1
